chore : jsp에 js 추가

--- a/src/main/webapp/WEB-INF/views/app-ecommerce-category-list.html
+++ b/src/main/webapp/WEB-INF/views/app-ecommerce-category-list.html
@@ -1957,5 +1957,6 @@
 
     <!-- Page JS -->
     <script src="../../assets/js/app-ecommerce-category-list.js"></script>
+    <script src="${pageContext.request.contextPath}/resources/assets/js/header.js"></script>
   </body>
 </html>
