--- a/src/main/webapp/WEB-INF/views/app-access-roles.html
+++ b/src/main/webapp/WEB-INF/views/app-access-roles.html
@@ -2446,5 +2446,6 @@
     <!-- Page JS -->
     <script src="../../assets/js/app-access-roles.js"></script>
     <script src="../../assets/js/modal-add-role.js"></script>
+    <script src="${pageContext.request.contextPath}/resources/assets/js/header.js"></script>
   </body>
 </html>
