[feat] 공지사항 에러 해결, 공지사항 안읽은사람 목록 ui

--- a/src/main/webapp/resources/assets/css/demo.css
+++ b/src/main/webapp/resources/assets/css/demo.css
@@ -122,3 +122,10 @@
   text-align: center;
   margin-top: 1rem;
 }
+
+.scrollable-list {
+    max-height: 400px; /* 스크롤이 나타날 최대 높이를 지정합니다. */
+    overflow-y: auto; /* 세로 스크롤이 나타나도록 설정합니다. */
+    border: 1px solid #ccc; /* 원하는 스타일을 지정할 수 있습니다. */
+    padding: 10px; /* 필요에 따라 여백을 조정합니다. */
+}
