--- a/src/main/webapp/WEB-INF/views/html/vertical-menu-template/pages-misc-error.html
+++ b/src/main/webapp/WEB-INF/views/html/vertical-menu-template/pages-misc-error.html
@@ -61,8 +61,8 @@
     <div class="container-xxl container-p-y">
       <div class="misc-wrapper">
         <h2 class="mb-2 mx-2">Page Not Found :(</h2>
-        <p class="mb-4 mx-2">Oops! 😖 The requested URL was not found on this server.</p>
-        <a href="index.html" class="btn btn-primary">Back to home</a>
+        <p class="mb-4 mx-2">오메! 서버에서 😖 요청하신 URL을 찾을 수 없습니다</p>
+        <a href="/exodia/main" class="btn btn-primary">집으로 돌아가</a>
         <div class="mt-3">
           <img
             src="../../assets/img/illustrations/page-misc-error-light.png"
